5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1671_1105.log
== TEST (2019-04-23 17:42:04) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:48:03) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:48:14) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- EXECUTION TIME:
0.289966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:03:09) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:03:21) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- EXECUTION TIME:
0.181829
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:03:30) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:03:40) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- EXECUTION TIME:
0.154853
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:03:44) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:04:08) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
elif (brasao <= br9):
	casa = Tully
-- EXECUTION TIME:
0.126647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:09:10) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
else:
	print(brasao invalido) 
elif (brasao <= br9):
	casa = Tully
-- EXECUTION TIME:
0.153085
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 28
    print(brasao invalido) 
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:09:13) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
else:
	print(brasao invalido) 
elif (brasao <= br9):
	casa = Tully
-- ERROR:
File "XXXX", line 28
    print(brasao invalido) 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:09:24) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
else:
	print("brasao invalido") 
elif (brasao <= br9):
	casa = Tully
-- ERROR:
File "XXXX", line 29
    elif (brasao <= br9):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:10:06) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton
else:
	print("brasao invalido") 
elif (brasao <= br9):
	casa = Tully
-- ERROR:
File "XXXX", line 29
    elif (brasao <= br9):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:12:53) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else:
	
-- ERROR:
File "XXXX", line 31
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:16:20) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else:
	
-- ERROR:
File "XXXX", line 32
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:28:04) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:28:35) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
-- EXECUTION TIME:
0.306216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:28:43) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:29:04) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
-- EXECUTION TIME:
0.162592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:30:32) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print(brasao invalido)
-- ERROR:
File "XXXX", line 31
    print(brasao invalido)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:31:15) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:31:30) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.18197
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:31:54) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:32:11) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.201877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:32:29) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:32:35) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.149682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:32:47) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.171256
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:32:49) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:32:56) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.133744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:33:09) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:33:15) 
-- CODE:
brasao = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (brasao <= br1):
	casa = Stark
elif (brasao <= br2):
	casa = Lannister
elif (brasao <= br3):
	casa = Baratheon
elif (brasao <= br4):
	casa = Targaryen
elif (brasao <= br5):
	casa = Tyrell
elif (brasao <= br6):
	casa = Martell
elif (brasao <= br7):
	casa = Greyjoy
elif (brasao <= br8):
	casa = Bolton 
elif (brasao <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.25184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:35:46) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:35:59) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.175681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:36:14) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.176888
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:36:19) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:46:48) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.141407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:50:54) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:51:11) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.197774
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:52:06) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:52:20) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	casa = Stark
elif (b <= br2):
	casa = Lannister
elif (b <= br3):
	casa = Baratheon
elif (b <= br4):
	casa = Targaryen
elif (b <= br5):
	casa = Tyrell
elif (b <= br6):
	casa = Martell
elif (b <= br7):
	casa = Greyjoy
elif (b <= br8):
	casa = Bolton 
elif (b <= br9):
	casa = Tully
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.199825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:53:03) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 20:53:17) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.208786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:53:27) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:21:42) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:21:51) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta

if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.148518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:48:34) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:")
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:49:02) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:")
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.129286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:49:12) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:")
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:49:27) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:")
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.14017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:50:26) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", br1)
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:50:37) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", br1)
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.130569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:29:21) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", b)
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:29:36) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", b)
if (b <= br1):
	print("Stark")
elif (b <= br2):
	print("Lannister")
elif (b <= br3):
	print("Baratheon")
elif (b <= br4):
	print("Targaryen")
elif (b <= br5):
	print("Tyrell")
elif (b <= br6):
	print("Martell")
elif (b <= br7):
	print("Greyjoy")
elif (b <= br8):
	print("Bolton") 
elif (b <= br9):
	print("Tully")
else: 
	print("brasao invalido")
-- EXECUTION TIME:
0.0931668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:41:46) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", b)
if (b <= br1):
	print("Casa: Stark")
elif (b <= br2):
	print("Casa: Lannister")
elif (b <= br3):
	print("Casa: Baratheon")
elif (b <= br4):
	print("Casa: Targaryen")
elif (b <= br5):
	print("Casa: Tyrell")
elif (b <= br6):
	print("Casa: Martell")
elif (b <= br7):
	print("Casa: Greyjoy")
elif (b <= br8):
	print("Casa: Bolton") 
elif (b <= br9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:41:54) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", b)
if (b <= br1):
	print("Casa: Stark")
elif (b <= br2):
	print("Casa: Lannister")
elif (b <= br3):
	print("Casa: Baratheon")
elif (b <= br4):
	print("Casa: Targaryen")
elif (b <= br5):
	print("Casa: Tyrell")
elif (b <= br6):
	print("Casa: Martell")
elif (b <= br7):
	print("Casa: Greyjoy")
elif (b <= br8):
	print("Casa: Bolton") 
elif (b <= br9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- EXECUTION TIME:
0.147272
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:42:17) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", b)
if (b <= br1):
	print("Casa: Stark")
elif (b <= br2):
	print("Casa: Lannister")
elif (b <= br3):
	print("Casa: Baratheon")
elif (b <= br4):
	print("Casa: Targaryen")
elif (b <= br5):
	print("Casa: Tyrell")
elif (b <= br6):
	print("Casa: Martell")
elif (b <= br7):
	print("Casa: Greyjoy")
elif (b <= br8):
	print("Casa: Bolton") 
elif (b <= br9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:42:59) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", b)
if (b <= br1):
	print("Casa: Stark")
elif (b <= br2):
	print("Casa: Lannister")
elif (b <= br3):
	print("Casa: Baratheon")
elif (b <= br4):
	print("Casa: Targaryen")
elif (b <= br5):
	print("Casa: Tyrell")
elif (b <= br6):
	print("Casa: Martell")
elif (b <= br7):
	print("Casa: Greyjoy")
elif (b <= br8):
	print("Casa: Bolton") 
elif (b <= br9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- EXECUTION TIME:
0.129112
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:58:25) 
-- CODE:
b = input("descricao do brasao: ")
br1 = lobo
br2 = leao
br3 = veado
br4 = dragao
br5 = rosa
br6 = sol
br7 = lula
br8 = esfolado
br9 = turta
print("Entrada:", b)
if (b <= br1):
	print("Casa: Stark")
elif (b <= br2):
	print("Casa: Lannister")
elif (b <= br3):
	print("Casa: Baratheon")
elif (b <= br4):
	print("Casa: Targaryen")
elif (b <= br5):
	print("Casa: Tyrell")
elif (b <= br6):
	print("Casa: Martell")
elif (b <= br7):
	print("Casa: Greyjoy")
elif (b <= br8):
	print("Casa: Bolton") 
elif (b <= br9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    br1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:13) 
-- CODE:
b = input("descricao do brasao: ")
print("Entrada:", b)
if (b == lobo):
	print("Casa: Stark")
elif (b == leao):
	print("Casa: Lannister")
elif (b == veado):
	print("Casa: Baratheon")
elif (b == dragao):
	print("Casa: Targaryen")
elif (b == rosa):
	print("Casa: Tyrell")
elif (b == sol):
	print("Casa: Martell")
elif (b == lula):
	print("Casa: Greyjoy")
elif (b == esfolado):
	print("Casa: Bolton") 
elif (b == turta):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:13:41) 
-- CODE:
b = input("descricao do brasao: ")
c1 = lobo
c2 = leao
c3 = veado
c4 = dragao
c5 = rosa
c6 = sol
c7 = lula
c8 = esfolado
c9 = turta
print("Entrada:", b)
if (b == c1):
	print("Casa: Stark")
elif (b == c2):
	print("Casa: Lannister")
elif (b == c3):
	print("Casa: Baratheon")
elif (b == c4):
	print("Casa: Targaryen")
elif (b == c5):
	print("Casa: Tyrell")
elif (b == c6):
	print("Casa: Martell")
elif (b == c7):
	print("Casa: Greyjoy")
elif (b == c8):
	print("Casa: Bolton") 
elif (b == c9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:25:12) 
-- CODE:
b = input("descricao do brasao: ")
c1 = lobo
c2 = leao
c3 = veado
c4 = dragao
c5 = rosa
c6 = sol
c7 = lula
c8 = esfolado
c9 = turta
print("Entrada:", b)
if (b == c1):
	print("Casa: Stark")
elif (b == c2):
	print("Casa: Lannister")
elif (b == c3):
	print("Casa: Baratheon")
elif (b == c4):
	print("Casa: Targaryen")
elif (b == c5):
	print("Casa: Tyrell")
elif (b == c6):
	print("Casa: Martell")
elif (b == c7):
	print("Casa: Greyjoy")
elif (b == c8):
	print("Casa: Bolton") 
elif (b == c9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = lobo
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:27:36) 
-- CODE:
b = input("descricao do brasao: ")
c1 = "lobo"
c2 = "leao"
c3 = "veado"
c4 = "dragao"
c5 = "rosa"
c6 = "sol"
c7 = "lula"
c8 = "esfolado"
c9 = "turta"
print("Entrada:", b)
if (b == c1):
	print("Casa: Stark")
elif (b == c2):
	print("Casa: Lannister")
elif (b == c3):
	print("Casa: Baratheon")
elif (b == c4):
	print("Casa: Targaryen")
elif (b == c5):
	print("Casa: Tyrell")
elif (b == c6):
	print("Casa: Martell")
elif (b == c7):
	print("Casa: Greyjoy")
elif (b == c8):
	print("Casa: Bolton") 
elif (b == c9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:27:45) 
-- CODE:
b = input("descricao do brasao: ")
c1 = "lobo"
c2 = "leao"
c3 = "veado"
c4 = "dragao"
c5 = "rosa"
c6 = "sol"
c7 = "lula"
c8 = "esfolado"
c9 = "turta"
print("Entrada:", b)
if (b == c1):
	print("Casa: Stark")
elif (b == c2):
	print("Casa: Lannister")
elif (b == c3):
	print("Casa: Baratheon")
elif (b == c4):
	print("Casa: Targaryen")
elif (b == c5):
	print("Casa: Tyrell")
elif (b == c6):
	print("Casa: Martell")
elif (b == c7):
	print("Casa: Greyjoy")
elif (b == c8):
	print("Casa: Bolton") 
elif (b == c9):
	print("Casa: Tully")
else: 
	print("Brasao invalido")
-- EXECUTION TIME:
0.232755
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
